--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+<meta name="referrer" content="origin">
+
     <title>All About Me- Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
@@ -172,6 +174,37 @@
       <div class="overlay"></div>
     </section>
 
+       <p class="h3" id="contact">Contact Me</p>
+<div class="container bg-white" style="margin-bottom: 20px; padding-bottom:
+10px; padding-top: 10px;">
+<form>
+
+<form method="POST"
+action="https://formspree.io/isaiahyonas@gmail.com">
+
+<div class="form-group">
+<label for="inputName">Name*</label>
+<input type="text" class="form-control" name="name" id="inputName" placeholder=“*
+as the required field" required>
+</div> 
+
+
+<div class="form-group">
+<label for="inputEmail4">Email*</label>
+<input type="email" class="form-control" name="email" id="inputEmail4" required>
+</div>
+
+<div class="form-group">
+<label for="exampleTextarea">Message</label>
+<textarea class="form-control" id="exampleTextarea" name="message"
+rows="3"></textarea>
+</div>
+
+<button type="submit" class="btn btn-primary">Send</button>
+
+</form>
+</div>
+
     <section class="contact bg-primary" id="contact">
       <div class="container">
         <h2>I
@@ -223,6 +256,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/new-age.min.js"></script>
+
+
+
 
   </body>
 
