--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ rows="3"></textarea>
     apiKey: "AIzaSyBysZW0jNE7rw4Pf9eGLhJY2ef_1k4VmIM",
     authDomain: "zaysapp-a58cf.firebaseapp.com",
     databaseURL: "https://zaysapp-a58cf.firebaseio.com",
-    projectId: "zaysap3essp-a58cf",
+    projectId: "zaysapp-a58cf",
     storageBucket: "zaysapp-a58cf.appspot.com",
     messagingSenderId: "339025517690"
   };
