--- a/index.html
+++ b/index.html
@@ -186,14 +186,18 @@ action="https://formspree.io/isaiahyonas@gmail.com"-->
 <form id="add-user-input">
 <div class="form-group">
 <label for="inputName">Name*</label>
-<input type="text" class="form-control" name="name" id="inputName" placeholder=“*
-as the required field" required>
+<input type="text" class="form-control" name="name" id="inputName"required>
 </div> 
 
 
 <div class="form-group">
 <label for="inputEmail4">Email*</label>
 <input type="email" class="form-control" name="email" id="inputEmail4" required>
+</div>
+
+<div class="form-group">
+<label for="inputPhone">Phone*</label>
+<input type="text" class="form-control" name="phone" id="inputPhone" required>
 </div>
 
 <div class="form-group">
