Fixed phone in database

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <meta name="referrer" content="origin">
 
-    <title>All About Me- Start Bootstrap Theme</title>
+    <title>All About Isaiah</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -205,10 +205,9 @@ action="https://formspree.io/isaiahyonas@gmail.com"-->
 <textarea class="form-control" id="exampleTextarea" name="message"
 rows="3"></textarea>
 </div>
-
-<button class="btn btn-primary">Send</button>
-
 </form>
+<button onclick="sendData();" class="btn btn-primary">Send</button>
+
 </div>
 
     <section class="contact bg-primary" id="contact">
