--- a/index.html
+++ b/index.html
@@ -233,6 +233,19 @@ rows="3"></textarea>
           </li>
         </ul>
       </div>
+      <div id="googleMap" style="width:100%;height:400px;"></div>
+
+        <script>
+        function myMap() {
+        var mapProp= {
+            center:new google.maps.LatLng(51.508742,-0.120850),
+            zoom:5,
+        };
+        var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        }
+        </script>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpssgK3gPxhv81Ufkd6H_dWz1wU5sM7gQ&callback=myMap"></script>
     </section>
 
     <footer>
