--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/tybg1.pdf" alt="First slide">
+      <img class="d-block w-100" src="img/tybg1.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/tybg2.jpg" alt="Second slide">
